--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,7 @@ venv/
 .idea/**
 
 # test related
-0to100-**/
-0*/
+0to100**/
 978*/
 map.md
 repo/
@@ -24,4 +23,6 @@ toc.md
 safaribooks/
 
 # pip install
-build/
+build
+/dist
+*.egg-info
